--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
       <version>3.1.1</version>
     </dependency>
 
+    <!--Aktualisieren von Konfigurationen on the fly (Publish and Subscribe) -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+    </dependency>
+
+
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
