--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,13 @@ spring.cloud.gateway.routes[3].filters[2]=RewritePath=/users-ws/(?<segment>.*), 
 #spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 token.secret = sldfjsd453589345893
+
+#Config-Server
+spring.config.import=optional:configserver:http://localhost:8012/
+
+
+#RabbitMQ for pushing configuration on the fly
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.user=guest
+spring.rabbitmq.password=guest
