Konfigurationen werden über lokale Dateien gezogen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,7 @@ token.secret = sldfjsd453589345893
 
 #Config-Server
 spring.config.import=optional:configserver:http://localhost:8012/
-
+spring.cloud.config.name=APIConfigServer
 
 #RabbitMQ for pushing configuration on the fly
 spring.rabbitmq.host=localhost
