--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,9 +35,16 @@ spring.cloud.gateway.routes[3].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[3].filters[1]=AuthorizationHeaderFilter
 spring.cloud.gateway.routes[3].filters[2]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
 
+#spring.cloud.gateway.routes[4].id=user-actuator
+#spring.cloud.gateway.routes[4].uri=lb://users-ws
+#spring.cloud.gateway.routes[4].predicates[0]=Path=/users-ws/actuator/*
+#spring.cloud.gateway.routes[4].predicates[1]=Method=GET
+#spring.cloud.gateway.routes[4].filters[0]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
+
+
 #Automatic Routing
-#spring.cloud.gateway.discovery.locator.enabled=true
-#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 token.secret = sldfjsd453589345893
 
@@ -50,3 +57,7 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.user=guest
 spring.rabbitmq.password=guest
+
+management.endpoint.gateway.enabled=true 
+management.endpoints.web.exposure.include=api-gateway
+
