Endpoint für Actuator deaktiviert.
Hat nicht funktioniert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,6 +58,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.user=guest
 spring.rabbitmq.password=guest
 
-management.endpoint.gateway.enabled=true 
-management.endpoints.web.exposure.include=api-gateway
+#management.endpoint.gateway.enabled=true
+#management.endpoints.web.exposure.include=api-gateway
 
